# tileserver

./: .env.example  .gitignore  .gitmodules  Dockerfile  Dockerfile.mapnik  Dockerfile.simple  LICENSE  Makefile  README.md  cartoProvider.js  cartoProviderSlim.js  cartoSlimVectorProvider.js  cartoVectorProvider.js  config.js  conftest.py  credentials.example.js  empty_hook.js  logger.js  package.json  pbdb-collection-provider.js  pureRedisCache.js  pyproject.toml  raster-provider.js  redisCache.js  seed.js  server.js  tileserver.js
.github/workflows/: build-dev.yaml  build-image.yaml  build-prod.yaml
__archive/reference/: multiscale-notes.md  seed.py
__archive/reference/seed_scripts/: copy_tiles.py
__archive/v1/: hexProvider.js  logger.js  pbdb-collection-provider.js  redisCache.js  server.js
__archive/v1/mapnik/: burwell_vector_tiny.xml  styles.xml
__archive/v1/seeder/: cartoVector.js  package.json  pbdb-collections.js  (+1 more)
__archive/web/: package.json
macrostrat_tileserver/: cache.py  cached_tiler.py  cli.py  function_layer.py  main.py  mapnik_layer.py  paleogeography.py  test_tileserver.py  utils.py
macrostrat_tileserver/embeddings/: __init__.py
macrostrat_tileserver/filterable/: __init__.py
macrostrat_tileserver/fixtures/: 01-tms-defs.sql  02-tile-utils.sql  03-layer-defs.sql  03-tile-cache.sql  04-carto-layer-defs.sql  04-layer-defs.sql  05-map-layer-defs.sql
macrostrat_tileserver/image_tiles/: __init__.py  config.py  convert.py  core.py  mapnik_styles.py  style.mss
macrostrat_tileserver/integrations/: __init__.py
macrostrat_tileserver/map_bounds/: __init__.py
macrostrat_tileserver/map_ingestion/: __init__.py
macrostrat_tileserver/rockd_checkins/: __init__.py  checkins.sql
macrostrat_tileserver/single_map/: __init__.py
macrostrat_tileserver/sql/: get-cached-tile.sql  set-cached-tile.sql
macrostrat_tileserver/tests/: fixtures.py  test_tileserver.py
macrostrat_tileserver/utils/: __init__.py  cache.py  output.py
macrostrat_tileserver/vector_search/: __init__.py
mapnik/: burwell_large_emphasized.xml  burwell_medium_emphasized.xml  burwell_small_emphasized.xml  burwell_tiny_emphasized.xml  burwell_vector_large.xml  burwell_vector_medium.xml  burwell_vector_slim_large.xml  burwell_vector_slim_medium.xml  burwell_vector_slim_small.xml  burwell_vector_slim_tiny.xml  burwell_vector_small.xml  burwell_vector_tiny.xml  burwell_vector_to_raster.xml  convert.js  large.xml  medium.xml  small.xml  styles.css  test.mml  tiny.xml
pages/main/: index.html
reference/seed_scripts/: json_schema.json
seeder/: .gitignore  carto-raster.mbtiles  carto-raster.mbtiles.old  cartoRaster.js  cartoSlimVector.js  cartoVector.js  pbdb-collections.js  server.js  tileserver.js
test-fixtures/: tileserver-test.pg-dump
v1/: .gitignore  hexGridProvider.js  raster-provider.js  seed.js
v1/mapnik/: burwell_vector_large.xml  large.xml
web/: Dockerfile  package-lock.json  package.json
web/app/: root.tsx
web/pages/: [table].ts  _app.tsx  index.tsx
web/styles/: Home.module.css  globals.css  map.module.sass
(+51 files in other folders)
