[tool.poetry]
authors = ["Daven Quinn <dev@davenquinn.com>"]
description = "Macrostrat tile server"
name = "macrostrat.tileserver"
packages = [{ include = "macrostrat_tileserver" }]
version = "2.1.0"

[tool.poetry.dependencies]
fastapi = "^0.111.0"
"macrostrat.database" = "^3.0"
"macrostrat.utils" = "^1.2.0"
pytest = "^7.2.1"
python = "^3.10"
python-dotenv = "^1.0.0"
timvt = { path = "./deps/timvt", develop = true }
typer = "^0.12.3"
uvicorn = "0.16.0"
titiler = "^0.18.5"
httpx = "^0.27.2"
mapbox-vector-tile = "^2.1.0"


[tool.poetry.group.raster-tiles]
optional = true

[tool.poetry.group.raster-tiles.dependencies]
mapnik = { git = "https://github.com/mapnik/python-mapnik.git", rev = "7db74a3a473df454634eef9bf8b92a8623da9940" }

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^24.8.0"
macrostrat-dinosaur = "^3.1.1"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.poetry.scripts]
tileserver = "macrostrat_tileserver.cli:_cli"

[tool.pytest.ini_options]
norecursedirs = "deps/*"
addopts = [
    "--import-mode=importlib",
]


